--- a/glowing,arrow,6/style.css
+++ b/glowing,arrow,6/style.css
@@ -1,35 +1,33 @@
-*{
-    min-height: 100vh;
-    background: #102624;
+* {
+  min-height: 100vh;
+  background: #102624;
 }
-.container{
-    position: relative;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.container {
+  position: relative;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-.container .loader{
-    position: relative;
-    width: 200px;
-    height: 200px;
-    
-    border: 1px solid #0d2323 ;
-    border-radius:50%;
-    background:#0d2323;
-}
-.container.loader::before
-{
-    content:'';
-    position: absolute;
-    top: 0%;
-    left: 0;
-    width:50%;
-    height: 100vh;
-    background: linear-gradient(to top ,transparent,rgba(0, 255, 249, 04));
-    background-size: 100px 100px;
-    background-repeat: no-repeat;
-    border-top-left-radius: 100px;
-    border-bottom-left-radius: 100px;
+.container .loader {
+  position: relative;
+  width: 200px;
+  height: 200px;
 
+  border: 1px solid #0d2323;
+  border-radius: 50%;
+  background: #0d2323;
+}
+.container.loader::before {
+  content: "";
+  position: absolute;
+  top: 0%;
+  left: 0;
+  width: 50%;
+  height: 100vh;
+  background: linear-gradient(to top, transparent, rgba(0, 255, 249, 04));
+  background-size: 100px 100px;
+  background-repeat: no-repeat;
+  border-top-left-radius: 100px;
+  border-bottom-left-radius: 100px;
 }
